--- a/index.html
+++ b/index.html
@@ -26,25 +26,25 @@
             src="./images/fb.png"
             style="border-radius: 50%"
             width="50"
-            alt="my pohto"
+            alt="facebook pohto"
           />
           <img
             src="./images/instagram.png"
             style="border-radius: 50%"
             width="50"
-            alt="my pohto"
+            alt="instagram pohto"
           />
           <img
             src="./images/twitter.png"
             style="border-radius: 50%"
             width="50"
-            alt="my pohto"
+            alt="twitter pohto"
           />
           <img
             src="./images/linkedin.png"
             style="border-radius: 50%"
             width="50"
-            alt="my pohto"
+            alt="linkedin pohto"
           />
         </td>
         <td style="align-content: start; border: none">
@@ -98,7 +98,7 @@
         <tr>
           <td rowspan="2">techCrop Solution</td>
           <td rowspan="2">
-            <img style="width: 200px" src="./images/three.jpg" alt />
+            <img style="width: 200px" src="./images/three.jpg" alt="techCrop logo" />
           </td>
           <td>senior Full stack developer</td>
           <td>
@@ -123,7 +123,7 @@
         </tr>
         <tr>
           <td>digital agency pro</td>
-          <td><img style="width: 200px" src="./images/one.jpg" alt /></td>
+          <td><img style="width: 200px" src="./images/one.jpg" alt="digital agency logo" /></td>
           <td>Frontend developer</td>
           <td>
             <ul>
@@ -136,7 +136,7 @@
         </tr>
         <tr>
           <td>wb design studio</td>
-          <td><img style="width: 200px" src="./images/two.jpg" alt /></td>
+          <td><img style="width: 200px" src="./images/two.jpg" alt="wb design logo" /></td>
           <td>junior web developer</td>
           <td>
             <ul>
@@ -196,10 +196,9 @@
                 <h2>Budget Range</h2>
                 <ul style="list-style-type: none;">
                     <li><input type="radio">Under 5000$</li>
-                    <li><input type="radio">Under 5000$</li>
-                    <li><input type="radio">Under 5000$</li>
-                    <li><input type="radio">Under 5000$</li>
-                    <li><input type="radio">Under 5000$</li>
+                    <li><input type="radio">5000$ - 10000$</li>
+                    <li><input type="radio">10000$ - 25000$</li>
+                    <li><input type="radio">over 25000$</li>
                 </ul>
             </td>
             <td colspan="2" style="border: none;">
@@ -220,3 +219,4 @@
    <button style="background-color: red;color: aliceblue;">Clear Form</button>
   </body>
 </html>
+
