--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
               <label for="HOM">How you hear about me?</label>
               <select name="Hearing-about-me" id="HOM">
                 <optgroup>
-                  <option value disabled selected>Select Source</option>
+                  <option value disabled selected hidden>Select Source</option>
                   <option value="Social Media">Social Media</option>
                   <option value="Linked IN">Linked IN</option>
                 </optgroup>
@@ -281,3 +281,4 @@
     </form>
   </body>
 </html>
+
