--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@
     </table>
     <h2 style="color: #1b6a9f">Experinece Timeline</h2>
 
-    <p style="text-align: center">Profisional Experinece Overview</p>
+
 
     <table border="1" width="100%" style="border-collapse: collapse">
+      <caption style="text-align: center">Profisional Experinece Overview</caption>
       <thead>
         <tr style="background-color: #1b6a9f">
           <th>Company</th>
@@ -281,3 +282,4 @@
     </form>
   </body>
 </html>
+
